Fix inactive tab text color on firefox

--- a/gtk-3.0/widgets/_menus.scss
+++ b/gtk-3.0/widgets/_menus.scss
@@ -3,8 +3,8 @@
  *********/
 menubar,
 .menubar {
-  background-color: $base_color;
-  color: $text_color;
+  background-color: $headerbar_color;
+  color: $headerbar_fg_color;
   -GtkWidget-window-dragging: true;
   padding: 0px;
   box-shadow: inset 0 -1px transparentize(black, 0.9);
